# yadro-test-cpp-tatlin

./: CMakeLists.txt  README.md
src/: FileTape.h  Solution.cpp  Solution.h  Tape.h  main.cpp
test/: test.cpp
test/data/: config.json  in.tape
